Added image fro react card

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 }
 
 .project1{
-background-image: url('');
+background-image: url('https://github.com/MaFer74/REACT-Portfolio/blob/main/src/images/Screenshot%202024-03-17%20at%2020.09.08.png?raw=true');
 }
 
 
